# CaBr2

./: .changelog.yml  .dockerignore  .editorconfig  .eslintrc.json  .eslintrc.yml  .foreach.toml  .gitattributes  .gitignore  .prettierignore  Betriebsanweisung V1.xml  Betriebsanweisungen V1.be  CHANGELOG.md  CONTRIBUTING.md  CaBr2.code-workspace  LICENSE  README.md  angular.json  crowdin.example.yml  karma.conf.js  package.json  renovate.json  transloco.config.js  tsconfig.json
.cargo/: config.toml
.gitea/issue_template/: bug_report.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backend.yml  crates.yml  frontend.yml  pull-translations.yml  push-translations.yml  spellcheck.yml  stale.yml  tauri-app-rust.yml  test.yml  update-translations.yml  wasm-lib.yml  webserver.yml
.woodpecker/: crates.yml  docker.yml  frontend.yml  tauri-app.yml  wasm-lib.yml  webserver.yml
assets/templates/: first.html
assets/translations/: de_by.json  de_de.json  en_us.json  fr.json  hr_hr.json  it.json  ru_ru.json
contrib/: for-each-cargo  pull-translations  push-translations  set-version  settings  update-translation  update-translations
crates/: Cargo.toml  rustfmt.toml
crates/config/: Cargo.toml
crates/config/src/: error.rs  handler.rs  lib.rs  plugin.rs  types.rs
crates/error-ser/: Cargo.toml
crates/load_save/: Cargo.toml
crates/load_save/src/: error.rs  handler.rs  lib.rs  types.rs  wasm.rs
crates/load_save/src/beryllium/: error.rs  mod.rs  types.rs
crates/load_save/src/cabr2/: error.rs  migrations.rs  mod.rs  tests.rs  types.rs
crates/load_save/src/pdf/: error.rs  merge.rs  mod.rs  types.rs
crates/load_save/tests/assets/: Knallerbsen_v0.cb2  Knallerbsen_v1.cb2  all_v0.cb2  all_v1.cb2  empty_v0.cb2  empty_v1.cb2
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/search/: Cargo.toml
crates/search/contrib/: gestis_helper.sh
crates/search/contrib/gestis/: helper.rs
crates/search/src/: error.rs  handler.rs  lib.rs  types.rs
crates/search/src/gestis/: error.rs  functions.rs  mod.rs  tests.rs  types.rs  xml_parser.rs  xml_parser_old.rs
crates/search/tests/assets/: bananenöl.json  calcium.json  cobaltdinitrat.json  wasser.json  wasserglas.json  wasserstoffperoxid.json
crates/types/: Cargo.toml
crates/types/src/: lib.rs  lock.rs
dockerfiles/app/: Dockerfile  default.conf
dockerfiles/webserver/: Dockerfile
docs/: consent-form.md  getting-started.html  getting-started.md  homepage_cabr2.md  telemetry.md
e2e/src/: app.e2e-spec.ts
frontend/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  README.md  angular.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts  styles.scss  test.ts
frontend/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: impls.rs  main.rs
frontend/src-tauri/src/impls/: config.rs  load_save.rs  logger.rs  search.rs
frontend/src-wasm/: Cargo.toml  README.md
frontend/src-wasm/src/: lib.rs
frontend/src-wasm/src/impls/: load_save.rs  mod.rs  search.rs
prompts/: consent-form.html  getting-started.html  telemetry.md
src/: debug-helper.ts  index.html  main.ts  styles.scss  test.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/cabr2_config/: Cargo.toml
src-tauri/cabr2_config/src/: cmd.rs  error.rs  handler.rs  lib.rs  plugin.rs  types.rs  webserver.rs
src-tauri/cabr2_load_save/: Cargo.toml
src-tauri/cabr2_load_save/src/: cmd.rs  error.rs  handler.rs  lib.rs  plugin.rs  types.rs  wasm.rs  webserver.rs
src-tauri/cabr2_load_save/src/beryllium/: mod.rs  types.rs
src-tauri/cabr2_load_save/src/cabr2/: mod.rs
src-tauri/cabr2_load_save/src/pdf/: merge.rs  mod.rs  types.rs
src-tauri/cabr2_logger/: Cargo.toml
src-tauri/cabr2_logger/src/: cmd.rs  lib.rs  plugin.rs
src-tauri/cabr2_search/: .gitignore  Cargo.toml  README.md
src-tauri/cabr2_search/assets/: cobaltdinitrat.json
src-tauri/cabr2_search/contrib/gestis/: helper.rs
src-tauri/cabr2_search/helper/gestis/: main.rs
src-tauri/cabr2_search/src/: cmd.rs  error.rs  handler.rs  lib.rs  plugin.rs  types.rs  wasm.rs  webserver.rs
src-tauri/cabr2_search/src/gestis/: handler.rs  mod.rs  types.rs  xml_parser.rs
src-tauri/cabr2_types/: Cargo.toml
src-tauri/cabr2_types/src/: lib.rs  logging.rs
src-tauri/cabr2_wasm_lib/: Cargo.toml
src-tauri/cabr2_wasm_lib/src/: lib.rs
src-tauri/src/: build.rs  main.rs  tauri_app.rs  webserver.rs
src-tauri/src/config/: cmd.rs  error.rs  handler.rs  mod.rs  types.rs
src-tauri/src/frontend_logger/: mod.rs
src-tauri/src/load_save/: cmd.rs  error.rs  handler.rs  mod.rs  types.rs
src-tauri/src/load_save/beryllium/: mod.rs  types.rs
src-tauri/src/load_save/pdf/: merge.rs  mod.rs
src-tauri/src/logger/: cmd.rs  mod.rs
src-tauri/src/logging/: cmd.rs  mod.rs
src-tauri/src/parsers/: error.rs  mod.rs
src-tauri/src/parsers/gestis/: cmd.rs  handler.rs  mod.rs  types.rs  xml_parser.rs
src-tauri/src/search/: cmd.rs  error.rs  handler.rs  mod.rs
src-tauri/src/search/gestis/: cmd.rs  error.rs  handler.rs  mod.rs  types.rs  xml_parser.rs
src-tauri/src/types/: mod.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/app/: App.tsx  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  global-styles.scss
src/assets/: defaultStrings.json  descriptions.json  docsTemplate.json  strings.json  strings_en.json
src/environments/: environment.prod.ts  environment.ts  environment.web.ts
src/styles/: color.scss
tauri-app/: angular.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-wasm/: Cargo.toml
tauri-app/src-wasm/src/: lib.rs
templates/: first.html  second.html  styles.css
translations/: de_by.json  de_de.json  en_us.json  hr_hr.json  ru_ru.json
webserver/: Cargo.toml  README.md
webserver/src/: config_impl.rs  load_save_impl.rs  main.rs  search_impl.rs
webserver/src/impls/: config.rs  load_save.rs  mod.rs  search.rs  types.rs
(+335 files in other folders)
