[package]
name = "cabr2"
version = "0.3.0"
description = 'Generate "experiment wise safety sheets" in compliance to European law.'
authors = [
  "Epsilon_02 <epsilon_02@mailbox.org>",
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>"
]
license = "GPLv3+"
repository = "https://github.com/Calciumdibromid/CaBr2/"
default-run = "cabr2"
edition = "2018"
build = "src/build.rs"

[package.metadata.bundle]
name = "Calciumdibromid"
identifier = "de.cabr2"
icon = [ "32x32.png", "128x128.png", "128x128@2x.png" ]
category = "Education"
resources = [ "ghs_symbols/*.png" ]

[build-dependencies]
tauri-build = { version = "1.0.0-beta-rc.0" }

[dependencies]
cabr2_config = { path = "./cabr2_config/" }
cabr2_load_save = { path = "./cabr2_load_save/", features = ["beryllium", "cabr2"] }
cabr2_logger = { path = "./cabr2_logger/" }
cabr2_search = { path = "./cabr2_search/", features = [ "tauri_plugin", "gestis" ] }
log = "0.4.14"
tauri = { version = "1.0.0-beta-rc.4", features = ["api-all"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
portable = [ "cabr2_config/portable" ]
default = [ "custom-protocol", "portable" ]

[workspace]
members = [
  "cabr2_types",
  "cabr2_config",
  "cabr2_load_save",
  "cabr2_logger",
  "cabr2_search"
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
