[package]
name = "cabr2"
version = "0.4.0"
description = 'Generate "experiment wise safety sheets" in compliance to European law.'
authors = [
  "Epsilon_02 <epsilon_02@mailbox.org>",
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
license = "GPLv3+"
repository = "https://github.com/Calciumdibromid/CaBr2/"
default-run = "cabr2"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
cabr2_config = { path = "./cabr2_config/" }
cabr2_load_save = { path = "./cabr2_load_save/" }
cabr2_logger = { path = "./cabr2_logger/", optional = true }
cabr2_search = { path = "./cabr2_search/" }
log = "0.4.14"
tauri = { version = "1.0.0-beta.8", features = ["api-all"], optional = true }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"], optional = true }
warp = { version = "0.3.2", optional = true }

[features]
default = [
  "portable",
  "beryllium",
  "cabr2",
  "pdf",
  "gestis",
]
portable = [ "cabr2_config/portable" ]
custom-protocol = [ "tauri/custom-protocol" ] # needed for tauri release builds
tauri_app = [
  "tauri",
  "cabr2_logger/tauri_plugin",
  "cabr2_config/tauri_plugin",
  "cabr2_load_save/tauri_plugin",
  "cabr2_search/tauri_plugin",
]
webserver = [
  "warp",
  "tokio",
  "cabr2_logger",
  "cabr2_config/webserver",
  "cabr2_load_save/webserver",
  "cabr2_search/webserver",
]

# cabr2_load_save file types
beryllium = [ "cabr2_load_save/beryllium" ]
cabr2 = [ "cabr2_load_save/cabr2" ]
pdf = [ "cabr2_load_save/pdf" ]

# cabr2_search providers
gestis = [ "cabr2_search/gestis" ]

[workspace]
members = [
  "cabr2_types",
  "cabr2_config",
  "cabr2_load_save",
  "cabr2_logger",
  "cabr2_search",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
