[package]
name = "cabr2_wasm_lib"
version = "0.3.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
cabr2_load_save = { path = "../src-tauri/cabr2_load_save/", features = ["wasm"] }
cabr2_search = { path = "../src-tauri/cabr2_search/", features = ["wasm"] }
cabr2_types = { path = "../src-tauri/cabr2_types/" }
console_error_panic_hook = {version = "0.1.6", optional = true}
console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.14"
serde_json = "1.0.64"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"

[features]
default = ["cabr2_load_save/beryllium", "cabr2_load_save/cabr2", "cabr2_search/gestis"]
debug_build = ["console_error_panic_hook"]

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
