[package]
name = "webserver"
version = "0.5.3"
edition = "2021"
description = 'CaBr2 backend as webserver.'
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
license = "GPLv3+"
repository = "https://codeberg.org/Calciumdibromid/CaBr2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../crates/config/", features = [ "webserver" ]}
load_save = { path = "../crates/load_save/" }
log = "0.4.17"
logger = { path = "../crates/logger/" }
search = { path = "../crates/search/" }
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
types = { path = "../crates/types/" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
warp = "0.3.3"
structopt = "0.3.26"
once_cell = "1.16.0"

[features]
portable = [ "config/portable" ]

# load_save file types
beryllium = [ "load_save/beryllium" ]
cabr2 = [ "load_save/cabr2" ]
pdf = [ "load_save/pdf" ]

# search providers
gestis = [ "search/gestis" ]

default = [ "beryllium", "cabr2", "pdf", "gestis" ]

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
