[package]
name = "config"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
directories-next = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["fs", "io-util"] }
toml = { version = "0.7.3", features = ["preserve_order"] }

types = { path = "../types/" }

[features]
portable = []
webserver = []
tauri-app = []

default = []
