[package]
name = "config"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
directories-next = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.19"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["fs", "io-util"] }
toml = { version = "0.7.6", features = ["preserve_order"] }

types = { path = "../types/" }

[features]
portable = []
webserver = []
tauri-app = []

default = []
