[package]
name = "load_save"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", default-features = false, optional = true }
handlebars = { version = "4.3.6", optional = true }
lazy_static = "1.4.0"
log = "0.4.17"
lopdf = { version = "0.30.0", optional = true }
quick-xml = { version = "0.28.2", features = ["serialize"], optional = true }
regex = { version = "1.7.3", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["fs"], optional = true }
wkhtmltopdf = { version = "0.4.0", optional = true }

config = { path = "../config/", optional = true }
error-ser = { path = "../error-ser" }
types = { path = "../types/", features = ["lock"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["rt", "macros"] }

[features]
beryllium = ["chrono", "quick-xml", "regex"]
cabr2 = ["serde_json"]
pdf = ["config", "tokio", "tokio/rt-multi-thread", "chrono", "handlebars", "lopdf", "serde_json", "wkhtmltopdf"]

__tokio = [ "tokio", "types/rt-tokio" ] # internal feature to enable tokio specific optimizations

default = [ "__tokio" ]
