[package]
name = "load_save"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
chrono = { version = "0.4.26", default-features = false, optional = true }
handlebars = { version = "4.3.7", optional = true }
lazy_static = "1.4.0"
log = "0.4.19"
lopdf = { version = "0.31.0", optional = true }
quick-xml = { version = "0.29.0", features = ["serialize"], optional = true }
regex = { version = "1.8.4", optional = true }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.102", optional = true }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["fs"], optional = true }
wkhtmltopdf = { version = "0.4.0", optional = true }

config = { path = "../config/", optional = true }
error-ser = { path = "../error-ser" }
types = { path = "../types/", features = ["lock"] }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["rt", "macros"] }

[features]
beryllium = ["chrono", "quick-xml", "regex"]
cabr2 = ["serde_json"]
pdf = ["config", "tokio", "tokio/rt-multi-thread", "chrono", "handlebars", "lopdf", "serde_json", "wkhtmltopdf"]

__tokio = [ "tokio", "types/rt-tokio" ] # internal feature to enable tokio specific optimizations

default = [ "__tokio" ]
