[package]
name = "logger"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
config = { path = "../config/" }
fern = "0.6.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"], optional = true }
tokio = "1.16.1"
types = { path = "../types/" }
