[package]
name = "logger"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default-features = false }
fern = "0.6.2"
log = "0.4.17"

config = { path = "../config/" }
types = { path = "../types/" }
