[package]
name = "search"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
cfg-if = "1.0.0"
chrono = { version = "0.4.23", default-feature = false }
env_logger = { version = "0.10.0", optional = true }
futures = { version = "0.3.26", optional = true }
lazy_static = "1.4.0"
log = "0.4.17"
quick-xml = { version = "0.27.1", optional = true, features = ["serialize"] }
regex = { version = "1.7.1", optional = true }
reqwest = { version = "0.11.14", features = ["deflate", "gzip", "json", "native-tls"], default-features = false, optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
structopt = { version = "0.3.26", optional = true }
thiserror = "1.0.38"
tokio = { version = "1.25.0", default-features = false, optional = true }

error-ser = { path = "../error-ser" }
types = { path = "../types/", features = ["lock"] }

[features]
gestis = [ "reqwest", "quick-xml", "regex" ]
gestis_helper = [ "gestis", "structopt", "env_logger", "tokio/rt-multi-thread", "tokio/macros" ]

__tokio = [ "types/rt-tokio" ] # internal feature to enable tokio specific optimizations

default = [ "__tokio" ]

[[bin]]
name = "gestis_helper"
path = "contrib/gestis/helper.rs"
required-features = [ "gestis_helper" ]
