[package]
name = "search"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
cfg-if = "1.0.0"
chrono = { version = "0.4.26", default-feature = false }
env_logger = { version = "0.10.0", optional = true }
futures = { version = "0.3.28", optional = true }
lazy_static = "1.4.0"
log = "0.4.19"
quick-xml = { version = "0.29.0", optional = true, features = ["serialize"] }
regex = { version = "1.8.4", optional = true }
reqwest = { version = "0.11.18", features = ["deflate", "gzip", "json", "native-tls"], default-features = false, optional = true }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
structopt = { version = "0.3.26", optional = true }
thiserror = "1.0.40"
tokio = { version = "1.29.1", default-features = false, optional = true }

error-ser = { path = "../error-ser" }
types = { path = "../types/", features = ["lock"] }

[features]
gestis = [ "reqwest", "quick-xml", "regex" ]
gestis_helper = [ "gestis", "structopt", "env_logger", "tokio/rt-multi-thread", "tokio/macros" ]

__tokio = [ "types/rt-tokio" ] # internal feature to enable tokio specific optimizations

default = [ "__tokio" ]

[[bin]]
name = "gestis_helper"
path = "contrib/gestis/helper.rs"
required-features = [ "gestis_helper" ]
