[package]
name = "cabr2_wasm_lib"
version = "0.5.3"
edition = "2021"
description = 'Wasm implementation for CaBr2.'
authors = [
  "crapStone <crapstone01@gmail.com>",
]
license = "GPLv3+"
repository = "https://codeberg.org/Calciumdibromid/CaBr2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.26", features = ["wasmbind"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", features = ["color"] }
js-sys = "=0.3.64"
log = "0.4.19"
serde = "1.0.171"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.100"
wasm-bindgen = { version = "=0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "=0.4.37"

load_save = { path = "../../crates/load_save/", default-features = false }
search = { path = "../../crates/search/", default-features = false }
types = { path = "../../crates/types/" }

[features]
default = ["load_save/beryllium", "load_save/cabr2", "search/gestis"]
debug_build = ["console_error_panic_hook"]

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
codegen-units = 1
lto = true
