[package]
name = "cabr2_config"
version = "0.4.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
cabr2_types = { path = "../cabr2_types/" }
directories-next = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
tauri = { version = "1.0.0-beta.8", default-features = false, optional = true }
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["fs", "io-util"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
warp = { version = "0.3.1", optional = true }

[features]
portable = []
tauri_plugin = ["tauri"]
webserver = ["warp", "cabr2_types/webserver"]
default = []
