[package]
name = "cabr2_load_save"
version = "0.4.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
cabr2_config = { path = "../cabr2_config/", optional = true }
cabr2_types = { path = "../cabr2_types/" }
cfg-if = "1.0.0"
chrono = { version = "0.4.19", optional = true }
handlebars = { version = "4.2.0", optional = true }
lazy_static = "1.4.0"
log = "0.4.14"
lopdf = { version = "0.27.0", optional = true }
quick-xml = { version = "0.22.0", features = ["serialize"], optional = true }
regex = { version = "1.4.6", optional = true }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73", optional = true }
tauri = { version = "1.0.0-beta.8", default-features = false, optional = true }
thiserror = "1.0.29"
tokio = { version = "1.15.0", features = ["fs"], optional = true }
uuid = { version = "0.8.2", features = ["serde", "v4"], optional = true }
warp = { version = "0.3.2", features = [], optional = true }
wkhtmltopdf = { version = "0.4.0", optional = true }

[features]
beryllium = ["chrono", "quick-xml", "regex"]
cabr2 = ["serde_json"]
pdf = ["cabr2_config", "tokio", "chrono", "handlebars", "lopdf", "serde_json", "wkhtmltopdf"]
tauri_plugin = ["tauri", "serde_json", "tokio"]
webserver = ["tokio", "uuid", "warp", "cabr2_types/webserver"]
wasm = []
default = []
