[package]
name = "cabr2_logger"
version = "0.3.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cabr2_config = { path = "../cabr2_config/" }
cabr2_types = { path = "../cabr2_types/" }
chrono = "0.4.19"
fern = "0.6.0"
log = "0.4.14"
serde = { version = "1.0.129", features = ["derive"], optional = true }
serde_json = { version = "1.0.67", optional = true }
tauri = { version = "1.0.0-beta.4", default-features = false, optional = true }
tokio = "1.10.1"

[features]
tauri_plugin = ["serde", "serde_json", "tauri"]
default = []
