[package]
name = "cabr2_search"
version = "0.3.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cabr2_types = { path = "../cabr2_types/" }
chrono = "0.4.19"
lazy_static = "1.4.0"
log = "0.4.14"
roxmltree = { version = "0.14.1", optional = true }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = { version = "0.3.21", optional = true }
tauri = { version = "1.0.0-beta.1", default-features = false, optional = true }
thiserror = "1.0.24"
ureq = { version = "2.1.0", features = ["tls", "json"], optional = true }

[features]
gestis = [ "roxmltree", "ureq" ]
tauri_plugin = [ "tauri" ]
default = []

[[bin]]
name = "gestis_helper"
path = "contrib/gestis/helper.rs"
required-features = [ "structopt", "gestis" ]
